@@ -26,12 +26,21 @@
 			return GetGeometry (out junk, out area, out orientation);
 		}
 
-		[DllImport("gtksharpglue-2")]
-		static extern void gtksharp_gtk_status_icon_present_menu (IntPtr raw, IntPtr menu, uint button, uint activate_time);
+		[UnmanagedFunctionPointer (CallingConvention.Cdecl)]
+		delegate void MenuPositionFuncNative (IntPtr menu, out int x, out int y, out bool push_in, IntPtr user_data);
+
+		static MenuPositionFuncNative StatusIconPositionMenuFunc = null;
+
+		[DllImport("libgtk-win32-2.0-0.dll")]
+		static extern void gtk_menu_popup (IntPtr menu,  IntPtr parent_menu_shell, IntPtr parent_menu_item, MenuPositionFuncNative func, IntPtr data, uint button, uint activate_time);
 
 		public void PresentMenu (Menu menu, uint button, uint activate_time) 
 		{
-			gtksharp_gtk_status_icon_present_menu (Handle, menu == null ? IntPtr.Zero : menu.Handle, button, activate_time);
+			if (StatusIconPositionMenuFunc == null)
+				// gtk_status_icon_position_menu already defined by autogenerated code
+				StatusIconPositionMenuFunc = new MenuPositionFuncNative (gtk_status_icon_position_menu);
+
+			gtk_menu_popup (menu == null ? IntPtr.Zero : menu.Handle, IntPtr.Zero, IntPtr.Zero, StatusIconPositionMenuFunc, Handle, button, activate_time);
 		}
 
 		[Obsolete ("use the File property instead")]
