@@ -4,7 +4,6 @@ libgtksharpglue_2_la_SOURCES =	\
 	cellrenderer.c		\
 	container.c		\
 	object.c		\
-	statusicon.c		\
 	style.c			\
 	vmglueheaders.h		\
 	widget.c
