@@ -1,37 +1,0 @@
-/*
- * statusicon.c - Glue methods for GtkStatusIcon
- *
- * Authors: 
- * 		Mike Kestner  <mkestner@novell.com)
- *
- * Copyright (c) 2007 Novell, Inc.
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of version 2 of the Lesser GNU General 
- * Public License as published by the Free Software Foundation.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this program; if not, write to the
- * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
- * Boston, MA 02111-1307, USA.
- */
-
-#include <gtk/gtkmenu.h>
-#include <gtk/gtkstatusicon.h>
-
-/* Forward declarations */
-void    gtksharp_gtk_status_icon_present_menu (GtkStatusIcon *icon, GtkMenu* menu, guint button, guint32 activate_time);
-
-/* */
-
-void    
-gtksharp_gtk_status_icon_present_menu (GtkStatusIcon *icon, GtkMenu* menu, guint button, guint32 activate_time)
-{
-	gtk_menu_popup (menu, NULL, NULL, gtk_status_icon_position_menu, icon, button, activate_time);
-}
-
