@@ -1,3 +1,8 @@
+2009-08-30  Christian Hoff  <christian_hoff@gmx.net>
+
+	* gtk/StatusIcon.custom: Use managed code to pass the address of
+	gtk_status_icon_position_menu to gtk_menu_popup.
+
 2009-08-19  Christian Hoff  <christian_hoff@gmx.net>
 
 	* generator/*.cs: Add the "partial" keyword to each generated class, 
